Created SignIn Page

--- a/main/index.html
+++ b/main/index.html
@@ -9,13 +9,13 @@
   <body>
     <div class="main">
       <nav>
-        <span><img src="assets/images/logo.svg" alt="" width="150px" /></span>
+        <span><img src="../assets/images/logo.svg" alt="" width="150px" /></span>
         <div class="nav-buttons">
           <div class="langbtn1">
             <div class="trans">
               <img
                 
-                src="assets/images/translate.png"
+                src="../assets/images/translate.png"
                 width="20px"
               />
             </div>
@@ -29,7 +29,7 @@
             </select>
           </div>
           <!-- <button class="btn btn-lang">English</button> -->
-          <button class="btn btn-red-sm">Sign In</button>
+          <a href="/form/index.html" class="btn btn-red-sm">Sign In</a>
         </div>
       </nav>
       <div class="box"></div>
@@ -55,16 +55,16 @@
         <div class="drop1">Genre</div>
       </div>
       <div class="movie">
-        <div class="movies"><img src="assets/images/m1.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m2.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m3.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m4.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m5.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m6.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m7.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m8.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m9.webp" alt="" /></div>
-        <div class="movies"><img src="assets/images/m10.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m1.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m2.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m3.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m4.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m5.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m6.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m7.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m8.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m9.webp" alt="" /></div>
+        <div class="movies"><img src="../assets/images/m10.webp" alt="" /></div>
       </div>
     </div>
 
@@ -107,7 +107,7 @@
         <div class="question">
           <div>What is Netflix?</div>
           <div class="plus">
-            <img src="assets/images/plus.png" width="30px" alt="" />
+            <img src="../assets/images/plus.png" width="30px" alt="" />
           </div>
         </div>
         <div class="answer"></div>
@@ -116,7 +116,7 @@
         <div class="question">
           <div>How much does Netflix cost?</div>
           <div class="plus">
-            <img src="assets/images/plus.png" width="30px" alt="" />
+            <img src="../assets/images/plus.png" width="30px" alt="" />
           </div>
         </div>
         <div class="answer"></div>
@@ -125,7 +125,7 @@
         <div class="question">
           <div>Where can I watch?</div>
           <div class="plus">
-            <img src="assets/images/plus.png" width="30px" alt="" />
+            <img src="../assets/images/plus.png" width="30px" alt="" />
           </div>
         </div>
         <div class="answer"></div>
@@ -134,7 +134,7 @@
         <div class="question">
           <div>How do I cancel?</div>
           <div class="plus">
-            <img src="assets/images/plus.png" width="30px" alt="" />
+            <img src="../assets/images/plus.png" width="30px" alt="" />
           </div>
         </div>
         <div class="answer"></div>
@@ -143,7 +143,7 @@
         <div class="question">
           <div>What can I watch on Netflix?</div>
           <div class="plus">
-            <img src="assets/images/plus.png" width="30px" alt="" />
+            <img src="../assets/images/plus.png" width="30px" alt="" />
           </div>
         </div>
         <div class="answer"></div>
@@ -152,7 +152,7 @@
         <div class="question">
           <div>Is Netflix good for kids?</div>
           <div class="plus">
-            <img src="assets/images/plus.png" width="30px" alt="" />
+            <img src="../assets/images/plus.png" width="30px" alt="" />
           </div>
         </div>
         <div class="answer"></div>
@@ -201,8 +201,9 @@
         <option value="English">English</option>
         <option value="Hindi">हिन्दी</option>
       </select>
-      <span id="flix-country">Netflix India</span>
     </div>
+    
+    <span id="flix-country">Netflix India</span>
     <script type="module" src="script.js" defer></script>
     <script src="faqs.js"></script>
   </body>
