Created sign in step

--- a/form/index.html
+++ b/form/index.html
@@ -75,9 +75,18 @@
       </div>
     </div>
 
-    <select name="language" id="language" class="lang">
-      <option value="English">English</option>
-      <option value="Hindi">हिन्दी</option>
-    </select>
+    <div class="langbtn2">
+      <div class="trans">
+        <img
+          
+          src="../assets/images/translate.png"
+          width="20px"
+        />
+      </div>
+      <select name="language" id="language" class="custom-select">
+        <option value="English">English</option>
+        <option value="Hindi">हिन्दी</option>
+      </select>
+    </div>
   </body>
 </html>
