Designed new sign in step page

--- a/formStep1.2/index.html
+++ b/formStep1.2/index.html
@@ -11,20 +11,24 @@
 
       <span><img src="../assets/images/logo.svg" alt="" width="150px" /></span>
 
-      <span  class="btn ">Sign Out</span>
+      <span  class="btn ">Sign In</span>
     </nav>
 
-    <hr class="line">
+    <hr>
 
     <div id="hero-main">
         <div id="hero">
-            <div class="hero-elements" id="setup">
-                <img src="../assets/images/setup.png" width=260px alt="">
-            </div>
+            
             <div class="hero-elements" id="nstep">STEP &nbsp; <b>1</b> &nbsp; OF &nbsp; <b>4</b></div>
-            <div class="hero-elements" id="finish">Finish setting up your account</div>
+            <div class="hero-elements" id="create">Create a password to start your membership</div>
             <div class="hero-elements" id="desc">
-                Netflix is personalised for you. <br> Create a password to watch on any device at any time.</div>
+              Just a few more steps and you're done! <br>
+              We hate paperwork, too.</div>
+              <div><input type="text" id="email" placeholder="Email">
+              </div>
+
+              <div><input type="password" id="password" placeholder=" Add a password"></div>
+
             <div  id="next" class="hero-elements"><div class="text">Next</div></div>
 
         </div>
