Completed developing all steps of form

--- a/form/index.html
+++ b/form/index.html
@@ -45,7 +45,7 @@
 
           <div class="interact form-elements">
             <div id="new">New to Netflix?</div>
-            <div id="now">Sign Up now.</div>
+            <a href="/formStep1.1/index.html"><div id="now">Sign Up now.</div></a>
           </div>
 
           <div class="form-elements" id="info">This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.</div>
