--- a/formStep1.1/index.html
+++ b/formStep1.1/index.html
@@ -24,7 +24,7 @@
             <div class="hero-elements" id="desc">
               Netflix is personalised for you. <br> Create a password to watch on any device at any time.</div>
               
-            <div  id="next" class="hero-elements"><div class="text">Next</div></div>
+              <a id="next" href="/formStep1.2/index.html"><div class="text">Next</div></a>
 
         </div>
     </div>
