--- a/formStep4/index.html
+++ b/formStep4/index.html
@@ -20,26 +20,31 @@
         <div id="hero">
 
             <div id="plan">
-            <div class="hero-elements" id="img" ><img src="../assets/images/tick.png" width="40px" alt=""></div>
-            <div class="hero-elements" id="nstep">STEP <b>3</b> OF <b>4</b></div>
-            <div class="hero-elements" id="opt">Choose your plan.</div>
+            <div class="hero-elements" id="img" ><img src="../assets/images/lock.png" width="40px" alt=""></div>
+            <div class="hero-elements" id="nstep">STEP <b>4</b> OF <b>4</b></div>
+            <div class="hero-elements" id="opt">Choose how to pay
+            </div>
             </div>
 
-            <div id="benefits">
-              <div class="hero-elements features">
-                <div><img src="/assets/images/checkk.png" width="25px" alt=""></div>
-                <div class="perks perk1">No commitments, cancel <br> anytime.</div>
-              </div>
-              <div class="hero-elements features">
-                <div><img src="/assets/images/checkk.png" width="25px" alt=""></div>
-                <div class="perks perk2">Everything on Netflix for one <br> low price.</div>
-              </div>
-              <div class="hero-elements features">
-                <div><img src="/assets/images/checkk.png" width="25px" alt=""></div>
-                <div class="perks perk3">No ads and no extra fees. Ever.</div>
-              </div>
+            <div class="hero-elements" id="change" >Your payment is encrypted and you can change your payment method at anytime</div>
+
+            <div class="hero-elements" id="secure">Secure for peace of mind.</div>
+            <div class="hero-elements" id="cancel">Cancel easily online.</div>
+
+            <div class="hero-elements" id="encryption">
+              <div>End-to-end-encrypted</div>
+            <div><img src="../assets/images/glock.png" width="15px" alt=""></div>
             </div>
-            <div  id="next" class="hero-elements"><div class="text">Next</div></div>
+
+            <div class="hero-elements payment" id="card">
+              <div>Credit or Debit Card</div>
+              <div><img src="../assets/images/arrow.png" width="20px"></div>
+            </div>
+            <div class="hero-elements payment" id="upi">
+              <div>UPI AutoPay</div>
+              <div><img src="../assets/images/arrow.png"width="20px" alt=""></div>
+            </div>
+           
         </div>
     </div>
 
